Fix some contrast issues with inputs in light Mode

--- a/public/themes/light.css
+++ b/public/themes/light.css
@@ -42,6 +42,7 @@
     --form-element-border-color: rgba(0, 0, 0, 0.3);
     --form-element-bg-color: var(--app-bg-color);
     --form-element-text-color: var(--app-text-color);
+    --form-element-primary-text-color: var(--button-primary-color);
     --form-element-label-color: rgba(0, 0, 0, 0.6);
     --form-element-secondary-color: rgba(0, 0, 0, 0.09);
     --form-element-icon-color: rgb(0, 0, 0, 0.6);
